--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,10 @@
 	},
 	"rules": {
 		"no-console": 2,
+    "no-unused-vars": ["error", { 
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_"
+    }],
 		"prettier/prettier": [
 			"warn",
 			{
